:white_check_mark: Add exception and check validation methode